# rust_pow2_web

./: CNAME  Cargo.toml  LICENSE-MIT  README.md  Rust_pow_2-91e337a59e2d8d39.js  Rust_pow_2-91e337a59e2d8d39_bg.wasm  Trunk.toml  index.html
.github/workflows/: pages.yml
src/: main.rs
